# PracticeCiic4050

./: CMakeLists.txt  cpplint_report.txt
include/: array_function.h  functions.h
src/: array_function.c  functions.c  main.c
test/: mem_program
